feat: Split bark-egest from bark-digest and add bark-schema.edn